# viswtimer

./: .gitignore  CMakeLists.txt  CMakePresets.json  codecoverage.sh
cmake/: i686-w64-mingw32-gcc.cmake  x86_64-w64-mingw32-gcc.cmake
core/: CMakeLists.txt
core/src/: viswtimer.c
core/src/inc/: viswtimer.h  viswtimer_private.h
doc/: Doxyfile
tests/: tst_viswtimer.c
tests/main/: main.c
